LIVIJUKU-542: Liitteen poistaminen: ikonien muutoksia: glyphicon-remove-sign --> glyphicon-remove ja glyphicon-ok-circle --> glyphicon-ok

--- a/app/scripts/components/hakemusSummary/index.styl
+++ b/app/scripts/components/hakemusSummary/index.styl
@@ -27,8 +27,9 @@
 .edit_mode
   background: #f5f5f5
 
-.glyphicon-remove
-  float: right
+.hakemus-summary__hakuaika_edit
+  .glyphicon-remove
+    float: right
 
 .hakuajat__button
   margin-top: 0.5em
