LIVIJUKU-540: Kaikki hakemukset-näkymä: taulukon riville tyylimuutos

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -237,6 +237,8 @@ textarea
 .st-sort-descent:after
   margin-left: 5px
   content: '\25BC'
+.table-hover
+  border-bottom: 1px solid #ddd
 
 .table-hover tr {
   cursor: pointer;
