LIVIJUKU-539: Kaikki hakemukset-näkymän panel-headingiin oma tyyli

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -267,6 +267,7 @@ textarea
     margin-top: 4px;
   .panel-heading
     background-color: white
+    padding: 30px 0px 0px 0px
     //background-color: #0086CA
     //background-color: #337AB7
     .panel-title
