LIVIJUKU-547: ELY-hakemukset: varsinainen hakemusnäyttö

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -36,3 +36,4 @@
 @import '../scripts/components/navigationLinks'
 @import '../scripts/components/tunnusluvut/kysynta'
 @import '../scripts/components/tunnusluvut/tarjonta'
+@import '../scripts/components/ely/maararahatarpeet'
