--- a/app/scripts/views/hakemus/ely-forms.html
+++ b/app/scripts/views/hakemus/ely-forms.html
@@ -2,10 +2,6 @@
       <h3>MÄÄRÄRAHATARPEET</h3>
   <juku-ely-maararahatarpeet vuosi="hakemus.vuosi"></juku-ely-maararahatarpeet>
 
-      <div id="ely_maaratarpeet" ui-grid="ely_maaratarpeet" ui-grid-resize-columns ui-grid-edit ui-grid-cellnav
-           class="grid"></div>
       <h3>KEHITTÄMISHANKKEIDEN ERITTELY HANKKEITTAIN</h3>
-
-      <div id="ely_kehittamishankkeet" ui-grid="ely_kehittamishankkeet" ui-grid-resize-columns ui-grid-edit
-           ui-grid-cellnav class="grid"></div>
+  <juku-ely-kehittamishankkeet kehittamishankkeet=""></juku-ely-kehittamishankkeet>
 </juku-form-section>
