--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -37,3 +37,4 @@
 @import '../scripts/components/tunnusluvut/kysynta'
 @import '../scripts/components/tunnusluvut/tarjonta'
 @import '../scripts/components/ely/maararahatarpeet'
+@import '../scripts/components/ely/kehittamishankkeet'
