--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -72,7 +72,7 @@
         {{hakemus.taydennyspyynto.selite}}
       </juku-form-row>
 
-      <juku-form-row ng-show="avustushakemusPaatosOlemassa() && isMaksatushakemus">
+      <juku-form-row ng-if="avustushakemusPaatosOlemassa() && isMaksatushakemus">
         <h5>MYÖNNETTY AVUSTUS VUODELLE {{hakemus.vuosi}}</h5>
         {{myonnettyAvustusPerVuosi() | currency:"&euro;"}} (sis. ALV)
         <juku-icon-link
@@ -84,7 +84,7 @@
         </juku-icon-link>
       </juku-form-row>
 
-      <juku-form-row ng-show="avustushakemusPaatosOlemassa() && onMaksatushakemus1()">
+      <juku-form-row ng-if="avustushakemusPaatosOlemassa() && onMaksatushakemus1()">
         <h5>MYÖNNETTY AVUSTUS AJALLE {{ajankohta}}{{hakemus.vuosi}}</h5>
         {{myonnettyAvustusPerJakso() | currency:"&euro;"}} (sis. ALV)
         <juku-icon-link
@@ -96,7 +96,7 @@
           Avaa päätös (PDF)
         </juku-icon-link>
       </juku-form-row>
-      <juku-form-row ng-show="maksatushakemus1PaatosOlemassa() && onMaksatushakemus2()">
+      <juku-form-row ng-if="maksatushakemus1PaatosOlemassa() && onMaksatushakemus2()">
         <h5>MYÖNNETTY AVUSTUS 1. MAKSATUSHAKEMUKSEN PERUSTEELLA</h5>
         {{maksatushakemus1PaatosMaksettu() | currency:"&euro;"}} (sis. ALV)
         <juku-icon-link
@@ -107,7 +107,7 @@
           Avaa päätös (PDF)
         </juku-icon-link>
       </juku-form-row>
-      <juku-form-row ng-show="maksatushakemus1PaatosOlemassa() && onMaksatushakemus2()">
+      <juku-form-row ng-if="maksatushakemus1PaatosOlemassa() && onMaksatushakemus2()">
         <h5>MYÖNNETTY AVUSTUS 2. MAKSATUSHAKEMUKSEN PERUSTEELLA</h5>
         {{myonnettyAvustusPerJakso() | currency:"&euro;"}} (sis. ALV)
         <juku-icon-link
@@ -149,66 +149,15 @@
       </juku-form-row>
 
     </juku-form-section>
-    <juku-form-section ng-show="hakemus.contentvisible">
 
-      <div class="row">
-        <div class="col-md-12">
-          <h3 ng-switch on="hakemus.hakemustyyppitunnus">
-            <span ng-switch-when='AH0'>
-              VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ
-            </span>
-            <span ng-switch-default>
-              HAETTAVAT MAKSATUKSET AJALLE {{ajankohta}}{{hakemus.vuosi}}
-            </span>
-          </h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-group">
-            <juku-checkbox ng-model="alv">
-              Haluan {{ hakemusTallentaminenEnabled() ? "syöttää summat" : "katsoa arvoja" }} arvonlisäverollisina.
-            </juku-checkbox>
-          </div>
-        </div>
-      </div>
-
-      <juku-avustusluokka-panel luokka="avustuskohdeluokka"
-                                name="{{avustuskohdeLuokat[avustuskohdeluokka.tunnus].nimi}}"
-                                hakemus="hakemus"
-                                kohde="avustuskohdeluokka"
-                                ng-repeat="avustuskohdeluokka in avustuskohdeluokat">
-
-        <juku-avustuskohde vuosi="hakemus.vuosi"
-                           vertailuarvot="haeVertailuarvot(avustuskohde.avustuskohdeluokkatunnus,avustuskohde.avustuskohdelajitunnus)"
-                           hakemustyyppi="hakemus.hakemustyyppitunnus"
-                           kohde="avustuskohde"
-                           alv="alv"
-                           hakemus="hakemus"
-                           name="{{avustuskohdeLuokat[avustuskohde.avustuskohdeluokkatunnus].avustuskohdelajit[avustuskohde.avustuskohdelajitunnus].nimi}}"
-                           ng-repeat="avustuskohde in avustuskohdeluokka.avustuskohteet"/>
-
-      </juku-avustusluokka-panel>
-
-      <div class="row">
-        <div class="col-md-9">
-          <h4>
-            {{ hakemus.hakemustyyppitunnus === 'AH0' ?
-            'HAETTAVA VALTIONAVUSTUS YHTEENSÄ:' :
-            'HAETTAVAT MAKSATUKSET YHTEENSÄ:'
-            }}
-          </h4>
-        </div>
-        <div class="col-md-3">
-          <div class="pull-right">
-            <h4>{{sumHaettavaAvustus() | currency:"&euro;"}} (sis. alv)</h4>
-          </div>
-        </div>
-      </div>
-    </juku-form-section>
+    <!-- Avustuskohteiden tiedot -->
+    <juku-avustuskohteet ng-if="!isELYhakemus"></juku-avustuskohteet>
 
     <!-- Seurantatiedot -->
     <juku-seuranta-forms ng-if="isMaksatushakemus"></juku-seuranta-forms>
+
+    <!-- ELY-hakemusten tiedot -->
+    <juku-ely-forms ng-if="isELYhakemus"></juku-ely-forms>
 
     <juku-form-section>
 
