--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -165,6 +165,11 @@ textarea
 .open > .dropdown-toggle.hakemuskausi-file-upload
   background-image: none
 
+.hakemuskausi-otsikko
+  margin-top: 0px
+  margin-bottom: 20px
+  font-weight: medium
+
 .hakuaika-input
   font-size: 10px
   line-height: 1.5
@@ -173,12 +178,11 @@ textarea
   margin-right: 30%
 
 .uusihakemuskausi
-  border: 3px dashed colors.primary
-  border-radius: 4px
-  color: #0067ce
-  margin-bottom: 30px
+  border-radius: 6px
+  border-style: dashed
+  border-width: 2px
+  background-color: white
   margin-top: 20px
-  padding: 20px
 
 .panel-body.clickable
   transition: background 200ms
