LIVIJUKU-538 - hakemuskauden hallinta -näyttö: käynnistetyn hakemuskauden taustaväri on gradientti valkoisesta kaivon (well) harmaaseen.

--- a/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
@@ -36,7 +36,7 @@
 
   <h3>KÄYNNISSÄ OLEVAT HAKEMUSKAUDET</h3>
 
-  <div ng-repeat="hakemuskausi in kaynnistetytHakemuskaudet | orderBy: 'vuosi': true" class="well">
+  <div ng-repeat="hakemuskausi in kaynnistetytHakemuskaudet | orderBy: 'vuosi': true" class="well kaynnistetty-hakemuskausi">
 
     <h2 class="hakemuskausi-otsikko">Hakemuskausi {{hakemuskausi.vuosi}}</h2>
 
