--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -184,6 +184,9 @@ textarea
   background-color: white
   margin-top: 20px
 
+.kaynnistetty-hakemuskausi
+  background: linear-gradient(to bottom, white 0%,rgba(0,0,0,0.05) 100%)
+
 .panel-body.clickable
   transition: background 200ms
 
