LIVIJUKU-547 - korjauksia taulukoiden tyyleihin ja taulukon html-rakenteeseen.

--- a/app/scripts/components/ely/maararahatarpeet/index.html
+++ b/app/scripts/components/ely/maararahatarpeet/index.html
@@ -35,7 +35,7 @@
           </tfoot>
           <tbody>
             <tr ng-repeat="maararahatarve in maararahatarpeet track by $index" ng-form>
-              <th>{{maararahatarve.maararahatarve}}</th>
+              <td>{{maararahatarve.maararahatarve}}</td>
               <td>
                 <form-group-compact label="Sidotut">
                   <input id="{{maararahatarve.maararahatarve + '-sidotut'}}" name="sidotut" type="text"
