--- a/app/scripts/components/ely/maararahatarpeet/index.styl
+++ b/app/scripts/components/ely/maararahatarpeet/index.styl
@@ -1,9 +1,9 @@
 .maararahatarpeet
   .table
-    border: 1px solid #ddd
+    //border: 1px solid #ddd
     tfoot
       font-weight: bold
   .yhteensa
     float: right
   .ekarivi
-    background-color: ghostwhite
+    //background-color: ghostwhite
