--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -277,3 +277,8 @@ textarea
       padding-top: 4px;
       padding-bottom: 4px;
 
+.a-disabled
+  pointer-events: none
+  cursor: default
+  pointer:none
+  opacity:.5
