LIVIJUKU-554: Suunnittelunäkymä: myönnettävä avustuskentän virheilmoitus

--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -97,7 +97,8 @@
                 <div ng-show="hakemusPaatetty(hakemus)">
                   {{hakemus.myonnettavaAvustus|currency:"&euro;"}}
                 </div>
-                <div ng-hide="hakemusPaatetty(hakemus) || hakemusKeskenerainen(hakemus)" class="form-group"
+                <div ng-hide="hakemusPaatetty(hakemus) || hakemusKeskenerainen(hakemus) || hakemusVireilla(hakemus)"
+                     class="form-group"
                      show-errors="{showSuccess: true}">
                   <input id="avustus_{{hakemus.hakemusId}}" name="avustus_{{hakemus.hakemusId}}" type="text"
                          min="-0.0001"
@@ -115,7 +116,7 @@
               </td>
               <td>
                 <juku-link-next
-                  ng-show="hakemusTarkastettu(hakemus) && sallittuAvustus(hakemus.myonnettavaAvustus,hakemus.haettuAvustus, hakemus.hakemuksenTila)"
+                  ng-if="hakemusTarkastettu(hakemus) && sallittuAvustus(hakemus.myonnettavaAvustus,hakemus.haettuAvustus, hakemus.hakemuksenTila)"
                   ui-sref="app.kasittelija.paatos({
                   hakemusid: hakemus.hakemusId,
                   haettuavustus: hakemus.haettuAvustus,
@@ -131,8 +132,9 @@
                     Päätöksentekoon
                   </span>
                 </juku-link-next>
-                <a ng-show="!sallittuAvustus(hakemus.myonnettavaAvustus,hakemus.haettuAvustus, hakemus.hakemuksenTila)"
-                   class="icon-link a-disabled">
+                <a
+                  ng-if="hakemusTarkastettu(hakemus) && !sallittuAvustus(hakemus.myonnettavaAvustus,hakemus.haettuAvustus, hakemus.hakemuksenTila)"
+                  class="icon-link a-disabled">
                   Päätöksentekoon
                   <span class="glyphicon glyphicon-arrow-right"></span>
                 </a>
@@ -158,5 +160,4 @@
       </juku-link-prev>
     </div>
   </div>
-</div>
 </div>
