--- a/app/scripts/views/hakemus/ely-forms.html
+++ b/app/scripts/views/hakemus/ely-forms.html
@@ -1,6 +1,6 @@
 <juku-form-section>
       <h3>MÄÄRÄRAHATARPEET</h3>
-  <juku-ely-maararahatarpeet vuosi="hakemus.vuosi"></juku-ely-maararahatarpeet>
+  <juku-ely-maararahatarpeet vuosi="hakemus.vuosi" maararahatarpeet="maararahaTarpeet" maararahatarvetyypit="maararahatarvetyypit"></juku-ely-maararahatarpeet>
 
       <h3>KEHITTÄMISHANKKEIDEN ERITTELY HANKKEITTAIN</h3>
   <juku-ely-kehittamishankkeet kehittamishankkeet=""></juku-ely-kehittamishankkeet>
