--- a/app/scripts/components/ely/kehittamishankkeet/index.html
+++ b/app/scripts/components/ely/kehittamishankkeet/index.html
@@ -11,7 +11,7 @@
               <th class="col-md-2 ekarivi">Arvo</th>
               <th class="col-md-5 ekarivi"
                   uib-tooltip="Kehittämishankkeen ajanjakso (vuodet eli onko hanke jatkuva vai uusi), lyhyt perustelu hankkeelle"
-                  tooltip-placement="top" tooltip-append-to-body="true">Lisätiedot
+                  tooltip-placement="top" tooltip-append-to-body="true">Kuvaus
               </th>
               <th class="col-md-1 ekarivi" ng-hide="isReadonly() || kehittamishankkeet.length === 0">Toiminnot</th>
             </tr>
@@ -52,12 +52,12 @@
                 </form-group-compact>
               </td>
               <td>
-                <form-group-compact label="Kommentit">
+                <form-group-compact label="Kuvaus">
                   <input id="{{'lisatiedot-'+$index}}" name="lisatiedot" type="text"
                          noenter
                          select-on-click
-                         ng-model="kehittamishanke.lisatiedot"
-                         placeholder="Lisatiedot">
+                         ng-model="kehittamishanke.kuvaus"
+                         placeholder="Kuvaus">
                 </form-group-compact>
               </td>
               <td><a id="{{'poistakehittamishanke-'+$index}}" href="" ng-click="poistaKehittamishanke($index)"
