LIVIJUKU-571: Hakemuksen lähettäminen: tarkenna tooltip-tekstiä (allekirjoitusliitteen lisääminen)

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -10,6 +10,7 @@
 @import '../scripts/components/sidebar'
 @import '../scripts/components/footer'
 @import '../scripts/components/navbar'
+@import '../scripts/components/confirmation'
 @import '../scripts/components/varmistusdialogi'
 @import '../scripts/components/poistumisvaroitus'
 @import '../scripts/components/navigation'
